feat (batch): import products

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -8,4 +8,6 @@ spring.datasource.driver-class-name = oracle.jdbc.driver.OracleDriver
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 
+spring.batch.jdbc.initialize-schema=always
+
 server.port = ${SERVER_PORT}
